--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Hi, I'm Dat. I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a product designer. Besides, I have a special love for motion design. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps."
     />
     <meta property="og:title" content="Dat Truong" />
-    <link rel="icon" href="/images/icon.png">
+    <link rel="icon" href="/images/favicon.png">
 
 
     <title>Dat Truong</title>
@@ -98,7 +98,7 @@
                     <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
                         <h1 class="last-name animated fadeInUp">TRUONG</h1>
                         <h1 class="first-name last-name animated fadeInUp delay-025s">QUOC DAT</h1>
-                        <a href="" class="my-home-link arrow animated fadeInUp delay-05s" id="to-project-button" name="to-project-button">my projects</a>
+                        <a href="" class="my-home-link arrow animated fadeInUp delay-05s" id="to-project-button" name="to-project-button">my works</a>
                     </div>
                 </div>
             </div>
