--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -196,29 +196,12 @@
     </div>
     <%include footer.ejs%>
 
-        <script src='https://labs.nearpod.com/bodymovin/demo/markus/halloween/lottie.min.js'></script>
+        <!-- <script src='https://labs.nearpod.com/bodymovin/demo/markus/halloween/lottie.min.js'></script> -->
+        <script src='https://labs.nearpod.com/bodymovin/demo/markus/halloween/lt.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-
         <script src='https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js'></script>
         <script src='https://npmcdn.com/imagesloaded@4/imagesloaded.pkgd.js'></script>
-        <!-- <script src="javascripts/test.js"></script> -->
         <script src="javascripts/script.js"></script>
-        <script>
-            var homeContainer = document.getElementById('homeContainer');
-            var animItem = bodymovin.loadAnimation({
-                wrapper: homeContainer,
-                animType: 'svg',
-                loop: true,
-                path: 'images/home.json'
-            });
-            var mailContainer = document.getElementById('mailContainer');
-            var animItem = bodymovin.loadAnimation({
-                wrapper: mailContainer,
-                animType: 'svg',
-                loop: true,
-                path: 'images/mail.json'
-            });
-        </script>
 </body>
 
 </html>
