--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="about-section">
-                    <div class="row project-row ">
+                    <div class="row">
                         <div class="col-md-6 about-col">
                             <p class="greeting right-align animated fadeIn delay-05s">It’s been a pleasure meeting you</p>
                         </div>
