--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -108,7 +108,7 @@
             <div class="my-section">
 
                 <div class="container text-center">
-                    <h2 class="animated animated fadeIn title">Works</h2>
+                    <h2 class="animated animated fadeIn title">Hightlights</h2>
                 </div>
 
                 <div class="project-container">
@@ -145,7 +145,16 @@
 
                 <div class="grid shot-container">
                     <div class="grid-sizer"></div>
-                    <div id="shots"></div>
+                    <div id="shots" class="shots"></div>
+                </div>
+
+                <div class="container text-center" style="margin-top: 5%;">
+                    <h2 class="animated animated fadeIn title">Videos</h2>
+                </div>
+
+                <div class="grid shot-container">
+                    <div class="grid-sizer"></div>
+                    <div id="videos" class="shots"></div>
                 </div>
             </div>
 
