--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -341,6 +341,8 @@ a:hover {
 .shot-container {
     padding-left: 4.8vw;
     padding-right: 4.8vw;
+    margin-bottom: 8vh;
+    display: inline-block;
 }
 
 .avatar-section {
@@ -405,13 +407,13 @@ a:hover {
     max-width: 100%;
 }
 
-#shots {
+.shots {
     display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
 }
 
-#shots .shot {
+.shots .shot {
     position: relative;
     display: block;
     background: #27A08D;
@@ -420,15 +422,15 @@ a:hover {
     position: relative;
 }
 
-#shots .shot:hover img {
+.shots .shot:hover img {
     opacity: .0;
 }
 
-#shots .shot:hover .shot-title {
+.shots .shot:hover .shot-title {
     opacity: 1;
 }
 
-#shots .shot .shot-title {
+.shots .shot .shot-title {
     font: 1.2vw "Montserrat";
     font-weight: 700;
     position: absolute;
@@ -444,7 +446,7 @@ a:hover {
     transform: translate(-50%, -50%)
 }
 
-#shots .shot img {
+.shots .shot img {
     display: block;
     max-width: 100%;
     -webkit-transition: opacity .2s ease-in-out;
@@ -584,7 +586,7 @@ a:hover {
     .grid-item {
         width: 100%;
     }
-    #shots .shot .shot-title {
+    .shots .shot .shot-title {
         font: 4.8vw "Montserrat";
         font-weight: 700;
     }
