--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -68,7 +68,7 @@
         </ul>
     </div>
     <div id="mySidebar" class="sidebar hamburger">
-        <ul class="nav d-flex align-items-end flex-column">
+        <ul id="mySidebarOptions" class="nav d-flex align-items-end flex-column">
             <li class="nav-item">
                 <a class="sidebar-option active" data-toggle="tab" href="#home">Home</a>
             </li>
@@ -97,18 +97,18 @@
                     </div>
                     <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
                         <h1 class="last-name animated fadeInUp">TRUONG</h1>
-                        <h1 class="first-name last-name animated fadeInUp delay-025s">QUOC DAT</h1>
+                        <h1 class="first-name last-name animated fadeInUp delay-025s">QUOC-DAT</h1>
                         <a href="" class="my-home-link arrow animated fadeInUp delay-05s" id="to-project-button" name="to-project-button">my works</a>
                     </div>
                 </div>
             </div>
         </div>
         <div id="works" class="tab-pane fade"><br>
-
+            <a id="back-to-top"></a>
             <div class="my-section">
 
                 <div class="container text-center">
-                    <h2 class="animated animated fadeIn title">Hightlights</h2>
+                    <h2 class="animated animated fadeIn title">Highlights</h2>
                 </div>
 
                 <div class="project-container">
@@ -166,8 +166,10 @@
                     <div id="mail-container"></div>
                 </div>
 
-                <div class="container d-flex justify-content-center avatar-section">
-                    <img src="images/about.png" class="my-about animated fadeIn delay-025s">
+                <div class="container d-flex align-items-center justify-content-center avatar-section animated fadeIn delay-025s">
+                    <div class="circle-black-stroke animated floating delay-01s"></div>
+                    <img src="images/about-circle.png" class="my-about animated floating delay-02s">
+                    <div class="circle-green-fill animated floating delay-03s"></div>
                 </div>
 
                 <div class="about-section">
@@ -177,9 +179,9 @@
                         </div>
                         <div class="col-md-6 d-flex align-content-center flex-wrap col-title animated fadeIn delay-075s about-col">
                             <p>Hi, I’m
-                                <span class="green">Truong Quoc Dat</span>.
+                                <span class="green">Quoc-Dat Truong</span>.
                             </p>
-                            <p> I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span> or a
+                            <p> I'm a Vietnamese boy. I was born on May 13th 1999. I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span>                                or a
                                 <span class="green">web developer</span>. You can download my <a href="Dat-Truong-CV.pdf" class="green-link" download>CV</a> or my <a href="Dat-Truong-Graphic-portfolio.pdf" class="green-link" download>graphic design portfolio</a>.
                                 Also, check out more shots on <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a> or <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
                                 <br/><br/>Besides, I have a special love for <span class="green">motion design</span>. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps.
@@ -207,7 +209,6 @@
 
         <!-- <script src='https://labs.nearpod.com/bodymovin/demo/markus/halloween/lottie.min.js'></script> -->
         <script src='https://labs.nearpod.com/bodymovin/demo/markus/halloween/lt.min.js'></script>
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
         <script src='https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js'></script>
         <script src='https://npmcdn.com/imagesloaded@4/imagesloaded.pkgd.js'></script>
         <script src="javascripts/script.js"></script>
