--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -33,6 +33,15 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158794000-1"></script>
     <script>
+        (function(h, e, a, t, m, p) {
+            m = e.createElement(a);
+            m.async = !0;
+            m.src = t;
+            p = e.getElementsByTagName(a)[0];
+            p.parentNode.insertBefore(m, p);
+        })(window, document, 'script', 'https://u.heatmap.it/log.js');
+    </script>
+    <script>
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
